<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rl_item_rcv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/jetplane2"
            android:layout_marginEnd="10dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_rx_msg_sorce_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_id_sample"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_rx_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_rx_msg_sorce_id"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_msgitem_recv"
            android:maxWidth="170dp"
            android:padding="10dp"
            android:text="@string/msg_recv_sampl"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_rx_msg_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:drawableStart="@drawable/ic_clock"
            android:drawablePadding="5dp"
            android:text="@string/msg_time_sample"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>