<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <RelativeLayout
        android:id="@+id/rl_main_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/rl_main_a_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_op_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:letterSpacing="0.2"
                android:text="@string/opmode_fix"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_channel_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif-smallcaps"
                android:letterSpacing="0.2"
                android:text="@string/default_channel_index"
                android:textAlignment="center"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_main_a_b"
            android:layout_width="360dp"
            android:layout_height="120dp"
            android:layout_below="@+id/rl_main_a_a"
            android:layout_marginTop="10dp"
            android:background="#011f4b">

            <TextView
                android:id="@+id/tv_freq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/default_channel_freq"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="55sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/freq_unit"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_main_a_c"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@+id/rl_main_a_b"
            android:layout_marginTop="10dp">


            <Button
                android:id="@+id/btn_channel_down"
                android:layout_width="40dp"
                android:layout_height="88dp"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_chn_down" />

            <Button
                android:id="@+id/btn_channel_up"
                android:layout_width="40dp"
                android:layout_height="88dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_chn_up" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/btn_channel_up"
                android:layout_toEndOf="@+id/btn_channel_down">

                <TextView
                    android:id="@+id/tv_channel_modulation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/default_channel_modulation"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_channel_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tv_channel_modulation"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/default_channel_name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_channel_pwr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_channel_modulation"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/default_channel_pwr"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rl_main_a_b"
            android:layout_marginTop="150dp"
            android:background="#FFFFFF" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fl_fun_selector"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/rl_main_a"
        android:layout_marginTop="20dp">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_image_slider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="80dp"
            android:paddingEnd="80dp">

        </androidx.viewpager2.widget.ViewPager2>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_function_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fl_fun_selector"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/default_channel_pwr"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>